# conc

./: .gitignore  Cargo.toml  debug.sh  err  run.sh
shaders/: compile_shaders.sh  default.frag  default.vert  frag.spv  vert.spv
src/: main.rs  math.rs  render.rs  shader.wgsl  util.rs  window.rs
src/math/: matrix.rs  vector.rs
src/math/vector/: vec3.rs  vec4.rs
src/render/: buffer.rs  command_buffer.rs  framebuffer.rs  pipeline.rs  shader.rs  shader_layout.rs  texture.rs
src/util/: into_array.rs
src/window/: input.rs
