[package]
name = "conc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode="1.3"
serde_json="1.0"

[dependencies.serde]
version="1.0"
features=["derive"]

[dependencies.glfw]
git="https://github.com/bjz/glfw-rs.git"
default-features=false