[package]
name = "conc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde_json = "1.0"
raw-window-handle = "0.3"
pollster = "0.2"

[dependencies.wgpu]
version = "0.11"
features = ["spirv"]

[dependencies.sdl2]
version = "0.35"
features = ["raw-window-handle"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

# [dependencies.glfw]
# git = "https://github.com/bjz/glfw-rs.git"
# default-features = false